# ml

./: test.md
clion for cuda(run sucessfully)/cudatest1/: CMakeLists.txt  main.cpp
clion for cuda/cuda_cmakelists-master/: main.cpp
